--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "gulp": "~3.5.2",
     "gulp-watch": "~0.5.0",
     "blanket": "~1.1.6",
-    "gulp-yuidoc": "~0.1.0"
+    "gulp-yuidoc": "~0.1.0",
+    "gulp-mocha": "~0.4.1"
   },
   "config": {
     "blanket": {
