Added git to the repository section of package.json (this should fix how the module is displayed on npm).

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "trie"
   ],
   "repository": {
+    "type": "git",
     "url": "https://github.com/alexeld/regex-trie.git"
   },
   "author": {
