--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
       "web": "http://www.handwritten.io"
     }
   ],
-  "dependencies": {},
+  "scripts": {
+    "test": "mocha"
+  },
+  "dependencies": {
+    "jsesc": "^0.5.0"
+  },
   "devDependencies": {
     "mocha": "~1.17.1",
     "should": "~3.1.2",
